--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -420,7 +420,7 @@ $color-orange: #F16C00;
     }
 
     md-spinner {
-      margin: auto;
+      margin: 20px auto 60px;
     }
   }
 
@@ -464,10 +464,14 @@ $color-orange: #F16C00;
     }
   }
 
-  &__funnel {
+  &__table-chart {
     margin: 10px 0;
     box-shadow: 0 0 5px rgba(0,0,0,0.2);
     background-color: white;
+
+    md-spinner {
+      margin: 60px auto;
+    }
 
     &__title {
       position: relative;
@@ -530,6 +534,7 @@ $color-orange: #F16C00;
       tbody {
         tr {
           border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+          cursor: pointer;
 
           td {
             padding: 15px;
@@ -560,13 +565,31 @@ $color-orange: #F16C00;
       border-top: 1px solid rgba(0, 0, 0, 0.2);
       color: $color-orange;
 
+      &--no-border {
+        border: none;
+      }
+
       span {
         cursor: pointer;
+        margin-right: 10px;
       }
     }
   }
 
   &__boxes {
     margin-top: 20px;
+  }
+
+  .dashboard__table {
+    overflow: hidden;
+    transition: height 0.75s cubic-bezier(0.35, 0, 0.25, 1);
+
+    @media only screen and (max-width: 1440px) {
+      height: 235px;
+    }
+
+    &--inactive {
+      height: 0 !important;
+    }
   }
 }
