Share url (dashbord) is encoded, advanced analytic request are performed only when apply is clicked

--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -102,6 +102,7 @@
       </div>
 
       <div class="dashboard__filters__advanced-button">
+        <span *ngIf="advanced" (click)="applyFilters()">APPLY</span>
         <span *ngIf="showResetButton()" (click)="resetFilters()">RESET</span>
         <span *ngIf="!advanced" (click)="toggleAdvanced()">ADVANCED</span>
         <span *ngIf="advanced" (click)="toggleAdvanced()">CLOSE</span>
