--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -465,7 +465,7 @@ $color-orange: #F16C00;
   }
 
   &__table-chart {
-    margin: 10px 0;
+    margin: 10px 0 20px;
     box-shadow: 0 0 5px rgba(0,0,0,0.2);
     background-color: white;
 
