--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -425,8 +425,13 @@ $color-orange: #F16C00;
   }
 
   &__chart {
+    margin-bottom: 20px;
     box-shadow: 0 0 5px rgba(0,0,0,0.2);
     background-color: white;
+
+    .invisible {
+      display: none;
+    }
 
     &__title {
       position: relative;
@@ -461,6 +466,11 @@ $color-orange: #F16C00;
         width: 100%;
         height: 100%;
       }
+    }
+
+    md-spinner {
+      margin: auto;
+      padding: 100px 0;
     }
   }
 
