--- a/src/app/shared/components/coming-soon/coming-soon.component.html
+++ b/src/app/shared/components/coming-soon/coming-soon.component.html
@@ -1,4 +1,6 @@
 <div class="coming-soon">
+  <div (click)="navigation.back()" class="coming-soon__back-button"><md-icon>reply</md-icon></div>
+
   <div class="coming-soon__container">
     <img class="coming-soon__image" src="/assets/images/logo-blue.svg">
     <div class="coming-soon__text">
