--- a/src/app/shared/components/coming-soon/coming-soon.component.scss
+++ b/src/app/shared/components/coming-soon/coming-soon.component.scss
@@ -50,4 +50,27 @@
       text-align: left;
     }
   }
+
+  &__back-button {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 66px;
+    height: 66px;
+    border-radius: 50%;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    background-color: #4A90E2;
+    color: white;
+    z-index: 1;
+    cursor: pointer;
+
+    md-icon {
+      position: absolute;
+      top: 12px;
+      left: 14px;
+      width: 36px;
+      height: 36px;
+      font-size: 36px;
+    }
+  }
 }
