--- a/src/app/pages/dashboard-page/dashboard-reports/dashboard-reports.component.html
+++ b/src/app/pages/dashboard-page/dashboard-reports/dashboard-reports.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="dashboard__reports__item" [routerLink]="['/reports', 'order']">
-    <div class="dashboard__reports__item__image"></div>
+    <img class="dashboard__reports__item__image" src="/assets/images/starticon.svg">
     <div class="dashboard__reports__item__content">
       <div class="dashboard__reports__item__content__main">Order Report</div>
       <div class="dashboard__reports__item__content__sub">Quick reports about orders</div>
@@ -13,7 +13,7 @@
   </div>
 
   <div class="dashboard__reports__item" [routerLink]="['/reports', 'transaction']">
-    <div class="dashboard__reports__item__image"></div>
+    <img class="dashboard__reports__item__image" src="/assets/images/starticon.svg">
     <div class="dashboard__reports__item__content">
       <div class="dashboard__reports__item__content__main">Transactions Report</div>
       <div class="dashboard__reports__item__content__sub">View information on transactions</div>
@@ -21,7 +21,7 @@
   </div>
 
   <div class="dashboard__reports__item" [routerLink]="['/reports', 'fulfillment']">
-    <div class="dashboard__reports__item__image"></div>
+    <img class="dashboard__reports__item__image" src="/assets/images/starticon.svg">
     <div class="dashboard__reports__item__content">
       <div class="dashboard__reports__item__content__main">Fulfillment Report</div>
       <div class="dashboard__reports__item__content__sub">Fulfillment overview for campaigns</div>
@@ -29,7 +29,7 @@
   </div>
 
   <div class="dashboard__reports__item" [routerLink]="['/reports', 'affiliate']">
-    <div class="dashboard__reports__item__image"></div>
+    <img class="dashboard__reports__item__image" src="/assets/images/starticon.svg">
     <div class="dashboard__reports__item__content">
       <div class="dashboard__reports__item__content__main">Affiliate Report</div>
       <div class="dashboard__reports__item__content__sub">Performance metrics about Affiliates</div>
@@ -37,7 +37,7 @@
   </div>
 
   <div class="dashboard__reports__item" [routerLink]="['/reports', 'retention']">
-    <div class="dashboard__reports__item__image"></div>
+    <img class="dashboard__reports__item__image" src="/assets/images/starticon.svg">
     <div class="dashboard__reports__item__content">
       <div class="dashboard__reports__item__content__main">Retention</div>
       <div class="dashboard__reports__item__content__sub">Learn how long customers stay</div>
