--- a/src/app/pages/dashboard-page/events-summary/events-summary.component.html
+++ b/src/app/pages/dashboard-page/events-summary/events-summary.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard__chart">
   <div class="dashboard__chart__title">
-    <div class="dashboard__chart__title__main">Events Summary</div>
+    <div class="dashboard__chart__title__main">Events</div>
     <div class="dashboard__chart__title__sub">events summary</div>
     <md-icon>more_vert</md-icon>
   </div>
