--- a/src/app/pages/dashboard-page/transaction-summary/transaction-summary.component.html
+++ b/src/app/pages/dashboard-page/transaction-summary/transaction-summary.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard__chart">
   <div class="dashboard__chart__title">
-    <div class="dashboard__chart__title__main">Product Sales</div>
-    <div class="dashboard__chart__title__sub">sales this week</div>
+    <div class="dashboard__chart__title__main">Transactions</div>
+    <div class="dashboard__chart__title__sub">transactions summary</div>
     <md-icon>more_vert</md-icon>
   </div>
 
