--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -529,6 +529,11 @@ $color-orange: #F16C00;
 
       thead {
         tr {
+
+          .clickable {
+            cursor: pointer;
+          }
+
           th {
             padding: 15px;
             color: rgba(0,0,0,0.4);
@@ -536,6 +541,13 @@ $color-orange: #F16C00;
 
             @media only screen and (max-width: 1440px) {
               padding: 10px;
+            }
+
+            md-icon {
+              position: absolute;
+              height: 20px;
+              width: 20px;
+              font-size: 20px;
             }
           }
         }
@@ -587,7 +599,9 @@ $color-orange: #F16C00;
   }
 
   &__boxes {
-    margin-top: 20px;
+    margin: -5px -5px 15px;
+    padding: 5px;
+    overflow: auto;
   }
 
   .dashboard__table {
