--- a/src/app/pages/dashboard-page/events-summary/events-summary.component.html
+++ b/src/app/pages/dashboard-page/events-summary/events-summary.component.html
@@ -5,6 +5,6 @@
     <md-icon>more_vert</md-icon>
   </div>
 
-  <chart [class.invisible]="!loaded" #chart [options]="options" (load)="loadChart(chart)"></chart>
+  <chart [class.invisible]="!loaded" #chartI [options]="options" (load)="loadChart(chartI)"></chart>
   <md-spinner *ngIf="!loaded"></md-spinner>
 </div>
