Move all dashbard loaders to cards

--- a/src/app/pages/dashboard-page/transaction-overview/transaction-overview.component.html
+++ b/src/app/pages/dashboard-page/transaction-overview/transaction-overview.component.html
@@ -1,6 +1,11 @@
-<div class="transaction-overview" *ngIf="overview && mapToResult && mapToResult(overview)">
-  <img  class="transaction-overview__image" src="/assets/images/{{image}}">
-  <div class="transaction-overview__count">{{mapToResult(overview).count}}</div>
-  <div class="transaction-overview__title">{{title}}</div>
-  <div class="transaction-overview__amount">${{mapToResult(overview).amount}}</div>
+<div class="transaction-overview">
+  <ng-container *ngIf="overview && mapToResult && mapToResult(overview); else loader">
+    <img  class="transaction-overview__image" src="/assets/images/{{image}}">
+    <div class="transaction-overview__count">{{mapToResult(overview).count}}</div>
+    <div class="transaction-overview__title">{{title}}</div>
+    <div class="transaction-overview__amount">${{mapToResult(overview).amount}}</div>
+  </ng-container>
+  <ng-template #loader>
+    <md-spinner></md-spinner>
+  </ng-template>
 </div>
