--- a/src/assets/scss/_profile.scss
+++ b/src/assets/scss/_profile.scss
@@ -100,6 +100,7 @@
       &__item {
         margin: 5px;
         background: white;
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
       }
 
       &__title {
