Add refresh dashboard cache button

--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -46,6 +46,7 @@
         </div>
 
         <div class="dashboard__filters__icons">
+          <md-icon class="refresh-icon" (click)="refresh()" md-tooltip="{{getLastUpdatedTime()}}" mdTooltipPosition="left">refresh</md-icon>
           <share-link [shareUrl]="getShareUrl()"></share-link>
           <md-icon>more_vert</md-icon>
         </div>
