--- a/src/app/pages/dashboard-page/movers-card/movers-card.component.scss
+++ b/src/app/pages/dashboard-page/movers-card/movers-card.component.scss
@@ -29,6 +29,7 @@ $color-orange: #F16C00;
       width: 20px;
       height: 20px;
       font-size: 20px;
+      color: rgba(0,0,0,0.6);
       cursor: pointer;
     }
   }
