--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -297,7 +297,7 @@ $color-orange: #F16C00;
       display: flex;
       right: 10px;
       top: 18px;
-      z-index: 5;
+      z-index: 4;
 
       @media only screen and (max-width: 1440px) {
         top: 10px;
@@ -307,8 +307,12 @@ $color-orange: #F16C00;
         width: 20px;
         height: 20px;
         font-size: 20px;
-        color: rgba(0, 0, 0, 0.87);
+        color: rgba(0, 0, 0, 0.6);
         cursor: pointer;
+
+        @media only screen and (min-width: 1441px) {
+          margin-left: 5px;
+        }
       }
 
       .share-link__container {
@@ -455,6 +459,7 @@ $color-orange: #F16C00;
         width: 20px;
         height: 20px;
         font-size: 20px;
+        color: rgba(0,0,0,0.6);
         cursor: pointer;
       }
     }
@@ -506,6 +511,7 @@ $color-orange: #F16C00;
         width: 20px;
         height: 20px;
         font-size: 20px;
+        color: rgba(0,0,0,0.6);
         cursor: pointer;
       }
     }
@@ -617,4 +623,12 @@ $color-orange: #F16C00;
       height: 0 !important;
     }
   }
+}
+
+.md-tooltip {
+  height: auto !important;
+  width: 118px !important;
+  text-align: center !important;
+  padding: 10px 5px !important;
+  line-height: 14px !important;
 }
