--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -231,6 +231,9 @@ $border-color: rgba(0, 0, 0, 0.2);
       margin: 0 20px 20px 0;
     }
 
+    &__no-results {
+      margin: 25px;
+    }
 
     &__results {
 
