--- a/src/app/pages/dashboard-page/movers-card/movers-card.component.html
+++ b/src/app/pages/dashboard-page/movers-card/movers-card.component.html
@@ -1,4 +1,4 @@
-<div class="movers-card">
+<div inViewport (inside)="fetch()" class="movers-card">
   <div class="movers-card__title">
     <div class="movers-card__title__main">Campaigns Watch List</div>
     <div class="movers-card__title__sub">Campaigns on the move</div>
