--- a/src/app/pages/dashboard-page/top-campaigns/top-campaigns.component.html
+++ b/src/app/pages/dashboard-page/top-campaigns/top-campaigns.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard__table-chart">
+<div inViewport (inside)="fetch()" class="dashboard__table-chart">
   <div class="dashboard__table-chart__title">
     <div class="dashboard__table-chart__title__main">Top Campaigns</div>
     <div class="dashboard__table-chart__title__sub">Clicks & Conversions</div>
