--- a/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.html
+++ b/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard__table-chart">
+<div inViewport (inside)="fetch()" class="dashboard__table-chart">
   <div class="dashboard__table-chart__title">
     <div class="dashboard__table-chart__title__main">Event Funnel</div>
     <div class="dashboard__table-chart__title__sub">Events by Event Type</div>
