--- a/src/app/pages/dashboard-page/transaction-overview/transaction-overview.component.html
+++ b/src/app/pages/dashboard-page/transaction-overview/transaction-overview.component.html
@@ -1,11 +1,12 @@
-<div class="transaction-overview">
-  <ng-container *ngIf="overview && mapToResult && mapToResult(overview); else loader">
-    <img  class="transaction-overview__image" src="/assets/images/{{image}}">
-    <div class="transaction-overview__count">{{mapToResult(overview).count}}</div>
-    <div class="transaction-overview__title">{{title}}</div>
-    <div class="transaction-overview__amount">${{mapToResult(overview).amount}}</div>
-  </ng-container>
-  <ng-template #loader>
-    <md-spinner></md-spinner>
-  </ng-template>
+<div inViewport (inside)="fetch()" class="dashboard__overview__container">
+  <div class="dashboard__overview">
+    <transaction-overview-card
+      class="dashboard__overview__item"
+      *ngFor="let option of overviewOptions"
+      [title]="option.title"
+      [mapToResult]="option.mapToResult"
+      [image]="option.image"
+      [overview]="analyticsService.transactionsOverview$ | async">
+    </transaction-overview-card>
+  </div>
 </div>
