--- a/src/app/pages/dashboard-page/transaction-summary/transaction-summary.component.html
+++ b/src/app/pages/dashboard-page/transaction-summary/transaction-summary.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard__chart">
+<div inViewport (inside)="fetch()" class="dashboard__chart">
   <div class="dashboard__chart__title">
     <div class="dashboard__chart__title__main">Transactions</div>
     <div class="dashboard__chart__title__sub">transactions summary</div>
