Add 'send test notification button' to notification settings

--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -108,6 +108,9 @@
               </div>
             </div>
           </div>
+
+          <div class="profile-page__content__notifications__test" (click)="sendTestNotification()">Send test notification</div>
+
         </md-tab>
 
         <md-tab>
