Add reports filter page (v1)

--- a/src/app/shared/components/input-autocomplete/input-autocomplete.component.scss
+++ b/src/app/shared/components/input-autocomplete/input-autocomplete.component.scss
@@ -1,6 +1,7 @@
 .input-autocomplete {
   position: relative;
   display: inline-block;
+  font-size: 14px;
 
   &__suggestions {
     position: absolute;
