--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,7 @@
 @import "assets/scss/_customer-view.scss";
 @import "assets/scss/_transaction-view.scss";
 @import "assets/scss/_profile.scss";
+@import "assets/scss/_advanced-filter.scss";
 
 /***************
   HTML Styles
