--- a/src/app/pages/dashboard-page/transaction-summary/transaction-summary.component.html
+++ b/src/app/pages/dashboard-page/transaction-summary/transaction-summary.component.html
@@ -5,6 +5,6 @@
     <md-icon>more_vert</md-icon>
   </div>
 
-  <chart [class.invisible]="!loaded" type="StockChart" [options]="chartOptions" (load)="saveChart($event.context)"></chart>
+  <chart style="display: block" [class.invisible]="!loaded" type="StockChart" [options]="chartOptions" (load)="saveChart($event.context)"></chart>
   <md-spinner *ngIf="!loaded"></md-spinner>
 </div>
