Fix reports list and direct all 'view more' to coming soon page

--- a/src/app/pages/dashboard-page/affiliate-events/affiliate-events.component.html
+++ b/src/app/pages/dashboard-page/affiliate-events/affiliate-events.component.html
@@ -34,6 +34,6 @@
 
   <div class="dashboard__table-chart__actions dashboard__table-chart__actions--no-border">
     <span (click)="toggleTable()">{{showTable ? 'COLLAPSE' : 'SHOW TABLE'}}</span>
-    <span>VIEW MORE</span>
+    <span [routerLink]="['/coming-soon']">VIEW MORE</span>
   </div>
 </div>
