--- a/src/app/pages/dashboard-page/dashboard-reports/dashboard-reports.component.scss
+++ b/src/app/pages/dashboard-page/dashboard-reports/dashboard-reports.component.scss
@@ -44,6 +44,11 @@ $color-orange: #F16C00;
       border-bottom: 1px solid rgba(0, 0, 0, 0.2);
       padding: 15px 15px 15px 0;
 
+      &--no-border {
+        border: none;
+        padding-bottom: 20px;
+      }
+
       &__main {
         font-size: 14px;
       }
@@ -56,7 +61,6 @@ $color-orange: #F16C00;
   }
 
   &__actions {
-    margin-top: 14px;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
     padding: 15px 20px;
     font-size: 12px;
@@ -65,5 +69,11 @@ $color-orange: #F16C00;
     span {
       cursor: pointer;
     }
+  }
+}
+
+.dashboard__reports__item:last-of-type {
+  div {
+    border: none;
   }
 }
