--- a/src/app/pages/dashboard-page/movers-card/movers-card.component.html
+++ b/src/app/pages/dashboard-page/movers-card/movers-card.component.html
@@ -21,5 +21,5 @@
     </div>
   </div>
 
-  <div class="movers-card__actions">VIEW MORE</div>
+  <div class="movers-card__actions"><span [routerLink]="['/coming-soon']">VIEW MORE</span></div>
 </div>
