Change transactions by affiliate to transaction by facet

--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -138,13 +138,8 @@
       [fetchObservable]="analyticsService.affiliateEvents$">
     </affiliate-events>
 
-    <affiliate-events
-      [title]="'Transactions by Affiliate'"
-      [subtitle]="'Transactions from the top Affiliates'"
-      [maxNumber]="5"
-      [date]="date"
-      (fetch)="analyticsService.getAffiliateTransactions(date.start.format(), date.end.format())"
-      [fetchObservable]="analyticsService.affiliateTransactions$">
-    </affiliate-events>
+    <transaction-by
+      [date]="date">
+    </transaction-by>
   </div>
 </div>
