Format all dates

--- a/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -32,7 +32,7 @@
         <md-card-content>
           <div class="transaction-view__content__item">
             <div class="transaction-view__content__item__label">Amount</div>
-            <div class="transaction-view__content__item__value">{{entity.amount}}</div>
+            <div class="transaction-view__content__item__value">{{entity.amount.usd()}}</div>
           </div>
 
           <div class="transaction-view__content__item">
